cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDART 17)

set(PROJECT_NAME matrix)
project(${PROJECT_NAME})

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})

set(PR_TESTS   "test_${PROJECT_NAME}")
set(PR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")

include_directories("${PR_INCLUDE}" gtest)

add_subdirectory(samples)
#add_subdirectory(gtest)
#add_subdirectory(test)